# streamline

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Doxyfile  LAUNCH.md  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  clippy.toml  codecov.yml  deny.toml  rustfmt.toml
.cargo/: config.toml
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: rfc.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/agents/: rust-coding-agent.md
.github/workflows/: benchmark-ci.yml  benchmark.yml  benchmarks.yml  chaos.yml  ci-full.yml  ci.yml  codeql.yml  compatibility.yml  conformance-matrix.yml  cross-sdk-integration.yml  docs-sync.yml  docs.yml  jepsen.yml  lts.yml  migration-test.yml  nightly-benchmarks.yml  publish-benchmarks.yml  publish-crate.yml  publish-sdks.yml  release-gate.yml  release.yml  scorecard.yml  sdk-conformance.yml  sdk-matrix.yml  v1-readiness.yml
benches/: comparative_benchmarks.rs  io_backend_benchmarks.rs  latency_benchmarks.rs  protocol_benchmarks.rs  storage_benchmarks.rs  zerocopy_benchmarks.rs
benches/comparative/: consumer_bench.rs  e2e_latency.rs  mod.rs  producer_bench.rs  run_comparative.sh  startup_bench.rs
benchmark-results/: comparative-results.json
benchmarks/: comparative_suite.rs  mod.rs
contrib/grafana-datasource/: README.md  package.json  plugin.json  tsconfig.json
contrib/openmessaging-benchmark/: Makefile  README.md  docker-compose.benchmarks.yml
crates/streamline-analytics/: Cargo.toml
crates/streamline-analytics/src/: alerts.rs  duckdb.rs  error.rs  lib.rs  topic_source.rs
crates/streamline-wasm/: Cargo.toml
crates/streamline-wasm/src/: api.rs  builtins.rs  catalog.rs  engine.rs  error.rs  faas.rs  function_registry.rs  lib.rs  pipeline.rs  runtime.rs
dev/bench/: index.html
docker/: docker-compose.benchmark.yml
docs/: API_STABILITY.md  ARCHITECTURE.md  BENCHMARKS.md  CLUSTERING_OPERATIONS.md  COMPLIANCE.md  DEAD_CODE_AUDIT.md  DEPRECATIONS.md  DEVELOPMENT.md  ERROR_CODES.md  GDPR.md  KAFKA_CONNECT_COMPATIBILITY.md  KAFKA_MIGRATION.md  LAUNCH_CHECKLIST.md  README.md  SDK_COMPATIBILITY_MATRIX.md  SDK_CONFORMANCE_SPEC.md  SECURITY_AUDIT_SCOPE.md  STORAGE_REFACTORING.md  TLS.md  TROUBLESHOOTING.md  UNWRAP_MIGRATION.md  V1_RELEASE_CRITERIA.md  analytics.md  clustering.md  pubsub.md  transactions.md
docs/adr/: 0001-kafka-protocol-compatibility.md  0002-single-binary-architecture.md  0003-kafka-connect-compatibility.md  0004-schema-registry-enhancements.md  (+14 more)
examples/: README.md  ai_stream_processing.rs  auth_setup.sh  backup_restore.sh  basic_consumer.rs  basic_producer.rs  cdc_to_lakehouse.rs  cluster_setup.sh  edge_sync.rs  full_pipeline.rs  grafana-dashboard.json  streamline-dev.toml  streamline.service  tls_setup.sh  topic_management.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_kafka_requests.rs  fuzz_protocol_parse.rs  fuzz_record_batch.rs  fuzz_request_decode.rs  fuzz_response_parse.rs
include/: streamline.h
issues/: 01-tls-ssl-support.md  02-sasl-authentication.md  03-consumer-groups.md  04-write-ahead-log.md  05-retention-policies.md  06-log-compaction.md  07-metrics-monitoring.md  08-clustering-replication.md  09-fix-unwrap-default-config.md  10-authorization-acls.md  11-inter-broker-authentication.md  12-audit-logging.md  13-resource-limits.md  14-safe-unwrap-defaults.md  15-chaos-testing.md  16-kafka-error-codes.md  17-connection-limiting.md  18-graceful-shutdown-timeout.md  19-performance-profiling.md  20-integration-tests-binaries.md  21-operational-documentation.md  22-replication-lag-metrics.md  23-distributed-tracing.md  24-cluster-bootstrapping-helper.md  25-memory-pressure-monitoring.md  26-load-endurance-tests.md  27-auth-disabled-warning.md  28-generate-api-docs.md  29-connection-logging.md  30-command-palette.md  31-message-templates.md  32-vim-navigation.md  33-deep-linking.md  34-audit-log-viewer.md  35-time-machine-mode.md  36-dlq-dashboard.md  37-consumer-lag-history.md  38-schema-evolution-timeline.md  39-multi-cluster-ui.md  40-partition-rebalancing-viz.md  (+17 more)
openapi/: streamline-api-v1.yaml
scripts/: check-v1-readiness.sh  check-version-sync.sh  demo.sh  dev-setup.sh  docs-consistency-check.sh  generate-cli-reference.sh  generate-config-reference.sh  generate-openapi.sh  generate-sdk-matrix.py  generate_openapi.py  generate_report.py  install.ps1  install.sh  publish-sdks.sh  quickstart-docker.sh  quickstart.sh  record-demo.sh  run-benchmarks.sh  run_benchmarks.sh  setup_kafka.sh  setup_redpanda.sh  validate-60-seconds.sh
src/: README.md  cli.rs  cli_auth.rs  cli_cluster.rs  cli_commands.rs  cli_config.rs  cli_context.rs  cli_doctor.rs  cli_errors.rs  cli_format.rs  cli_groups.rs  cli_history.rs  cli_ops.rs  cli_produce_consume.rs  cli_shell.rs  cli_telemetry.rs  cli_topics.rs  embedded.rs  error.rs  lib.rs  main.rs  testing.rs
tests/: README.md  analytics_test.rs  api_integration.rs  auth_test.rs  benchmark_test.rs  binary_test.rs  chaos_test.rs  cluster_failover.rs  cluster_test.rs  conformance_test.rs  crash_recovery_test.rs  cross_sdk_test.rs  delta_sink_test.rs  eos_certification_test.rs  featurestore_test.rs  graphql_test.rs  iceberg_sink_test.rs  integration_helpers.rs  integration_pipeline_test.rs  integration_test.rs  kafka_connect_test.rs  load_test.rs  multi_dc_replication_test.rs  property_test.rs  protocol_acl_test.rs  protocol_admin_test.rs  protocol_api_versions_test.rs  protocol_compatibility_test.rs  protocol_config_test.rs  protocol_consumer_group_test.rs  protocol_coordinator_test.rs  protocol_edge_cases_test.rs  protocol_encoding_test.rs  protocol_error_codes_test.rs  protocol_error_handling_test.rs  protocol_fetch_features_test.rs  protocol_framing_test.rs  protocol_headers_test.rs  protocol_idempotent_producer_test.rs  protocol_isolation_levels_test.rs  (+19 more)
(+747 files in other folders)
